# geonum

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  math-1-0.md
.agents/: onboard.md
.github/: copilot-instructions.md
.github/workflows/: publish.yaml  test.yaml
benches/: geonum_benchmarks.rs
src/: angle.rs  dimensions.rs  geocollection.rs  geonum_mod.rs  lib.rs  multivector.rs
src/traits/: affine.rs  chemistry.rs  electromagnetics.rs  machine_learning.rs  manifold.rs  mod.rs  optics.rs  projection.rs  waves.rs
tests/: addition_test.rs  affine_test.rs  algebra_test.rs  algorithms_test.rs  angle_arithmetic_test.rs  arithmetic_test.rs  astrophysics_test.rs  calculus_test.rs  category_theory_test.rs  cga_test.rs  chem_constants_test.rs  chemistry_test.rs  computer_vision_test.rs  dimension_test.rs  economics_test.rs  einstein_test.rs  electromagnetic_field_theory_test.rs  em_field_theory_test.rs  fem_test.rs  finance_test.rs  geocollection_test.rs  geometry_test.rs  grade_test.rs  gravitational_wave_test.rs  lib_test.rs  linear_algebra_test.rs  machine_learning_test.rs  mechanics_test.rs  ml_attention_test.rs  ml_training_test.rs  monetary_policy_test.rs  motion_laws_test.rs  multivector_test.rs  numbers_test.rs  optics_test.rs  optimization_test.rs  pga_test.rs  pseudoscalar_test.rs  qm_test.rs  quantum_mechanics_test.rs  (+9 more)
