[package]
name = "geonum"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/mxfactorial/geonum"
description = "geometric number library supporting unlimited dimensions with O(1) complexity"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["geonum", "geometry", "math", "algebra", "geometric-algebra"]
categories = ["mathematics", "simulation", "algorithms", "data-structures"]
authors = ["mxfactorial"]

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "geonum_benchmarks"
harness = false
